ADD Mechanism Login to Dashboard

--- a/src/app/layouts/landing-layout/landing-layout.component.html
+++ b/src/app/layouts/landing-layout/landing-layout.component.html
@@ -1,2 +1,32 @@
-<p>landing-layout works!</p>
-<ng-content></ng-content>
+<div class="px-2 py-1.5">
+  <p-menubar [model]="items">
+    <ng-template #start>
+      <p-image src="assets/logo-horizontal.png" width="120"></p-image>
+    </ng-template>
+    <ng-template #item let-item let-root="root">
+      <a pRipple class="flex items-center p-menubar-item-link">
+        <span>{{ item.label }}</span>
+        <p-badge
+          *ngIf="item.badge"
+          [ngClass]="{ 'ml-auto': !root, 'ml-2': root }"
+          [value]="item.badge"
+        />
+        <span
+          *ngIf="item.shortcut"
+          class="ml-auto border border-surface rounded bg-emphasis text-muted-color text-xs p-1"
+          >{{ item.shortcut }}</span
+        >
+        <i
+          *ngIf="item.items"
+          [ngClass]="['ml-auto pi', root ? 'pi-angle-down' : 'pi-angle-right']"
+        ></i>
+      </a>
+    </ng-template>
+    <ng-template #end>
+      <div class="flex items-center gap-2">
+        <p-button label="Login" icon="pi pi-sign-in" severity="secondary" (onClick)="handleLoginButton()" />
+      </div>
+    </ng-template>
+  </p-menubar>
+  <ng-content></ng-content>
+</div>
