--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+@import "tailwindcss";
+@import "tailwindcss-primeui";
+
+
+.container {
+  width: 100%;
+  height: auto;
+  padding: 32px 24px;
+  box-sizing: border-box;
+  /* margin: 0 auto; */
+}
