--- a/src/app/layouts/main-layout/main-navbar/main-navbar.component.html
+++ b/src/app/layouts/main-layout/main-navbar/main-navbar.component.html
@@ -1,11 +1,8 @@
 <nav class="bg-amber-400 text-white px-6 py-4 flex justify-between items-center shadow-lg">
-  <!-- Logo -->
   <a routerLink="/test" class="text-xl font-bold">Table Reservation</a>
 
-  <!-- Menu -->
   <div class="flex items-center space-x-4">
 
-    <!-- Login / Logout Button -->
-    <p-button size="small" severity="secondary" label="Logout" (onClick)="logout()" />
+    <p-button class="custom-btn" size="small" severity="secondary" label="Logout" (onClick)="logout()" />
   </div>
 </nav>
