--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center h-screen">
+<div class="flex items-center justify-center h-screen bg-slate-100">
   <p-card class="w-md">
     <ng-template #title>Login</ng-template>
     <form class="space-y-1" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
