--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,15 +1,19 @@
-<div class="flex flex-col h-screen bg-slate-50">
-  <app-main-navbar></app-main-navbar>
-  <div class="flex flex-1">
-    <!-- Sidebar -->
-    <div class="px-2 w-64 py-4">
-      <app-main-side-menu></app-main-side-menu>
-    </div>
+<div *ngIf="isServer; else notServer" class="flex justify-center h-screen">
+  <p-progress-spinner ariaLabel="loading" />
+</div>
+<ng-template #notServer>
+  <div class="flex flex-col h-screen bg-slate-50">
+    <app-main-navbar></app-main-navbar>
+    <div class="flex flex-1">
+      <!-- Sidebar -->
+      <div class="px-2 w-64 py-4">
+        <app-main-side-menu></app-main-side-menu>
+      </div>
 
-    <!-- Content -->
-    <div class="flex-1 p-4">
-      <p>Content</p>
-      <i class="pi pi-check"></i>
+      <!-- Content -->
+      <div class="flex-1 p-4">
+        <ng-content></ng-content>
+      </div>
     </div>
   </div>
-</div>
+</ng-template>
